Fixed z-indexing issue for spinner

--- a/src/WebComponents/QueryGrid/query-grid.scss
+++ b/src/WebComponents/QueryGrid/query-grid.scss
@@ -441,6 +441,10 @@
         z-index: 2;
     }
 
+    vi-spinner {
+        z-index: 3;
+    }
+
     &:not(.initializing) {
         #initializingOverlay {
             display: none;
